kubernetes/deployment.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: bellman-deployment
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: bellman
#  template:
#    metadata:
#      labels:
#        app: bellman
#    spec:
#      containers:
#        - name: bellman-container
#          image: aryanpatel111/bellman-shortest-path-finder
#          ports:
#            - containerPort: 3001  # Assuming your Spring Boot app listens on port 8080




apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: your-backend-image:tag
          ports:
            - containerPort: 9191
